Multi taxonomy support (#1127)